schema_derive/tests/ui/fail/fail_on_tuple_struct.stderr
error: Schema can only be derived for structs with named fields
 --> tests/ui/fail/fail_on_tuple_struct.rs:4:1
  |
4 | struct TupleStruct(f32, i32);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
